[gd_scene load_steps=6 format=3 uid="uid://c8xuk4t0oy2w3"]

[ext_resource type="PackedScene" uid="uid://yi0qo5jarv75" path="res://Common/IconButton.tscn" id="1_36v2b"]
[ext_resource type="Script" uid="uid://dfgd2d3s54jg5" path="res://PreviewPanel.gd" id="1_k0gcd"]
[ext_resource type="Theme" uid="uid://06nalyy5clgq" path="res://Assets/Theme.tres" id="1_t54jc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fwg0"]
bg_color = Color(0.12718913, 0.27836752, 0.6306313, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t54jc"]
bg_color = Color(0.59607846, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="PreviewPanel" type="PanelContainer" unique_id=254307831]
offset_right = 540.0
offset_bottom = 188.0
theme = ExtResource("1_t54jc")
script = ExtResource("1_k0gcd")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=865798467]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer" unique_id=1191082803]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer" unique_id=933270157]
layout_mode = 2
size_flags_horizontal = 0

[node name="RotateResizeArms" parent="HBoxContainer/MarginContainer/VBoxContainer" unique_id=1635265080 instance=ExtResource("1_36v2b")]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Toggle Resize Arms Towards Cursor"
toggle_mode = true
button_pressed = true
iconName = "arrow-pointer"
iconSize = 32

[node name="ShowIdleFrame" parent="HBoxContainer/MarginContainer/VBoxContainer" unique_id=1606729341 instance=ExtResource("1_36v2b")]
modulate = Color(0.336, 0.7, 0.825, 0.75)
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Show / Hide Idle Frame"
toggle_mode = true
button_pressed = true
iconName = "person"
iconSize = 32
activeColor = Color(0, 0.7661489, 0.8403863, 1)

[node name="ShowJumpFrame" parent="HBoxContainer/MarginContainer/VBoxContainer" unique_id=663450384 instance=ExtResource("1_36v2b")]
modulate = Color(0.336, 0.7, 0.825, 0.75)
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Show / Hide Jump Frame"
toggle_mode = true
button_pressed = true
iconName = "frog"
iconSize = 24
activeColor = Color(0, 0.7661489, 0.8403863, 1)

[node name="ShowWalkingAnimation" parent="HBoxContainer/MarginContainer/VBoxContainer" unique_id=883459559 instance=ExtResource("1_36v2b")]
modulate = Color(0.336, 0.7, 0.825, 0.75)
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Show / Hide Walking Animation"
toggle_mode = true
button_pressed = true
iconName = "person-walking"
iconSize = 32
activeColor = Color(0, 0.7661489, 0.8403863, 1)

[node name="ShowSwingingAnimation" parent="HBoxContainer/MarginContainer/VBoxContainer" unique_id=595822364 instance=ExtResource("1_36v2b")]
modulate = Color(0.336, 0.7, 0.825, 0.75)
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Show / Hide Swinging Animation"
toggle_mode = true
button_pressed = true
iconName = "spoon"
iconSize = 24
activeColor = Color(0, 0.7661489, 0.8403863, 1)

[node name="IdleFrameContainer" type="Control" parent="HBoxContainer" unique_id=1053732600]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 280)
layout_mode = 2
size_flags_horizontal = 6

[node name="JumpFrameContainer" type="Control" parent="HBoxContainer" unique_id=191983633]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 280)
layout_mode = 2
size_flags_horizontal = 6

[node name="WalkingAnimationContainer" type="Control" parent="HBoxContainer" unique_id=2032196770]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 280)
layout_mode = 2
size_flags_horizontal = 6

[node name="SwingingAnimationContainer" type="Control" parent="HBoxContainer" unique_id=1539593207]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 280)
layout_mode = 2
size_flags_horizontal = 6

[node name="ExtraControls" type="MarginContainer" parent="." unique_id=528337017]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ExtraControls" unique_id=1614667230]
layout_mode = 2
theme_override_constants/separation = 11

[node name="PanelContainer" type="PanelContainer" parent="ExtraControls/HBoxContainer" unique_id=1315069869]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3fwg0")

[node name="Maximize" parent="ExtraControls/HBoxContainer/PanelContainer" unique_id=1020808759 instance=ExtResource("1_36v2b")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
tooltip_text = "Maximize Preview"
iconName = "maximize"
iconSize = 24
activeColor = Color(0.23397979, 0.38025114, 0.75696963, 1)

[node name="PanelContainer2" type="PanelContainer" parent="ExtraControls/HBoxContainer" unique_id=1166945318]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t54jc")

[node name="Delete" parent="ExtraControls/HBoxContainer/PanelContainer2" unique_id=737192462 instance=ExtResource("1_36v2b")]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Delete Preview"
iconName = "trash"
iconSize = 24
activeColor = Color(0.65697235, 0, 0.1864891, 1)

[connection signal="toggled" from="HBoxContainer/MarginContainer/VBoxContainer/RotateResizeArms" to="." method="onRotateResizeArmsToggled"]
[connection signal="toggled" from="HBoxContainer/MarginContainer/VBoxContainer/ShowIdleFrame" to="." method="onShowIdleFrameToggled"]
[connection signal="toggled" from="HBoxContainer/MarginContainer/VBoxContainer/ShowJumpFrame" to="." method="onShowJumpFrameToggled"]
[connection signal="toggled" from="HBoxContainer/MarginContainer/VBoxContainer/ShowWalkingAnimation" to="." method="onShowWalkingAnimationToggled"]
[connection signal="toggled" from="HBoxContainer/MarginContainer/VBoxContainer/ShowSwingingAnimation" to="." method="onShowSwingingAnimationToggled"]
[connection signal="pressed" from="ExtraControls/HBoxContainer/PanelContainer/Maximize" to="." method="onMaximizePressed"]
[connection signal="pressed" from="ExtraControls/HBoxContainer/PanelContainer2/Delete" to="." method="onDeletePressed"]
